--- a/A Friend Java/AFriendJava/src/main/java/UI/CustomComponents/AFChatItem.form
+++ b/A Friend Java/AFriendJava/src/main/java/UI/CustomComponents/AFChatItem.form
@@ -24,7 +24,7 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="TopPanel" alignment="0" max="32767" attributes="0"/>
+                  <Component id="TopPanel" alignment="0" pref="870" max="32767" attributes="0"/>
                   <Component id="BottomPanel" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -49,26 +49,9 @@
         </Property>
       </Properties>
 
-      <Layout>
-        <DimensionLayout dim="0">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
-                  <Component id="PanelBody" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="PanelButton" min="-2" pref="72" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="246" max="32767" attributes="0"/>
-              </Group>
-          </Group>
-        </DimensionLayout>
-        <DimensionLayout dim="1">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="PanelBody" max="32767" attributes="0"/>
-              <Component id="PanelButton" max="32767" attributes="0"/>
-          </Group>
-        </DimensionLayout>
-      </Layout>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
       <SubComponents>
-        <Container class="javax.swing.JPanel" name="PanelBody">
+        <Container class="javax.swing.JPanel" name="PanelBodyLeft">
           <Properties>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[290, 100]"/>
@@ -78,20 +61,23 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="LabelBody" pref="424" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="TextBody" pref="330" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="LabelBody" alignment="1" max="32767" attributes="0"/>
+                  <Component id="TextBody" alignment="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="LabelBody">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="THIS IS A TEXT MESS"/>
-              </Properties>
+            <Component class="javax.swing.JTextField" name="TextBody">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TextBodyActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -110,17 +96,17 @@
                       <Component id="ButtonCopy" min="-2" pref="27" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="ButtonDelete" min="-2" pref="27" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="66" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="ButtonCopy" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="ButtonDelete" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="ButtonCopy" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="ButtonDelete" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                   </Group>
@@ -136,9 +122,6 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/UI/CustomComponents/copyIcon.png"/>
-                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="ButtonDelete">
@@ -149,11 +132,37 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/UI/CustomComponents/deleteIcon.png"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="jButton1"/>
               </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
+        <Container class="javax.swing.JPanel" name="PanelBodyRight">
+          <Properties>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[290, 100]"/>
+            </Property>
+          </Properties>
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
+                      <Component id="TextBody1" pref="473" max="32767" attributes="0"/>
+                  </Group>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="TextBody1" alignment="0" pref="133" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+          </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JTextField" name="TextBody1">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TextBody1ActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -182,7 +191,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="LabelAuthor">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Sender"/>
+            <Property name="text" type="java.lang.String" value="Time-Date"/>
           </Properties>
         </Component>
       </SubComponents>
